change docker and run and debug it locally

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = mysql+mysqlconnector://ragwebui:ragwebui@db/ragwebui
+sqlalchemy.url = mysql+mysqlconnector://realestateaiagent:realestateaiagent@db/realestateaiagent
 
 [loggers]
 keys = root,sqlalchemy,alembic,uvicorn
